--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: go
 go:
   - 1.x
   - 1.12.1
-
+  -
+before_install:
+  - go get github.com/mattn/goveralls
 script:
+  - $GOPATH/bin/goveralls -service=travis-ci
   - go test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
