--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ script:
   - $GOPATH/bin/goveralls -service=travis-ci
   - go test
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
